--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "debug": "^2.1.1",
     "depd": "^1.0.0",
     "inflection": "^1.6.0",
-    "loopback-connector": "git+https://github.com/umbrella-web/loopback-connector.git#develop",
+    "loopback-connector": "^2.1.0",
     "node-uuid": "^1.4.2",
     "qs": "^3.1.0",
     "traverse": "^0.6.6"
